--- a/.github/workflows/deb-release.yml
+++ b/.github/workflows/deb-release.yml
@@ -1,4 +1,4 @@
-name: Build and Publish DEB Package
+name: Build and Publish DEB Package to GitHub Pages
 
 on:
   push:
@@ -9,7 +9,7 @@ env:
   GO_VERSION: "1.22"
 
 jobs:
-  build-deb:
+  build-and-deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -68,8 +68,30 @@ jobs:
           echo "Checking for file: ./wal-g_${VERSION}_${{ matrix.arch }}.deb"
           ls -lh ./wal-g_${VERSION}_${{ matrix.arch }}.deb || echo "DEB package not found"
 
-      - name: Upload DEB package as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: wal-g-deb-${{ matrix.arch }}
-          path: ./wal-g_${{ env.VERSION }}_${{ matrix.arch }}.deb
+      - name: Deploy to GitHub Pages
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+
+          git clone --depth=1 --branch=gh-pages https://github.com/${{ github.repository }}.git repo-pages
+          cd repo-pages
+
+          mkdir -p dists/stable/main/binary-amd64
+          cp ../wal-g_${VERSION}_${{ matrix.arch }}.deb dists/stable/main/binary-amd64/
+          
+          dpkg-scanpackages --arch amd64 dists/stable/main/binary-amd64 > dists/stable/main/binary-amd64/Packages
+          gzip -k dists/stable/main/binary-amd64/Packages
+
+          cat <<EOF > dists/stable/Release
+          Origin: WAL-G Repo
+          Label: WAL-G APT Repository
+          Suite: stable
+          Codename: stable
+          Architectures: amd64
+          Components: main
+          Description: APT repository for WAL-G
+          EOF
+
+          git add .
+          git commit -m "Update APT repo with WAL-G ${VERSION}"
+          git push origin gh-pages
