--- a/.github/workflows/deb-release.yml
+++ b/.github/workflows/deb-release.yml
@@ -5,7 +5,6 @@ on:
     tags:
       - 'v*'  # Запуск при пуше нового тега (например, v3.0.2)
 
-# Разрешаем Actions писать в репозиторий (напр. в gh-pages)
 permissions:
   contents: write
 
@@ -17,36 +16,50 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        arch: [ amd64 ]
+        arch: [ amd64, arm64 ]  # Две архитектуры
         os: [ ubuntu-22.04 ]
     steps:
+      # 1. Клонируем репозиторий
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2. Устанавливаем Go
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      # 3. Устанавливаем необходимые пакетные зависимости для сборки
       - name: Install dependencies
         run: sudo apt-get install -y devscripts debhelper dh-make dpkg-dev build-essential
 
+      # 4. make deps (если нужно подтянуть go-модули и т.п.)
       - name: Make deps
         run: make deps
 
+      # 5. Сборка WAL-G под соответствующую архитектуру
       - name: Build WAL-G
         run: |
+          # Экспортируем переменные для кросс-компиляции:
+          # (если Makefile это поддерживает автоматически)
+          export GOOS=linux
+          export GOARCH=${{ matrix.arch }}
           make pg_build
+          
+          # Переименовываем бинарник в wal-g-<arch>
           mv main/pg/wal-g wal-g-${{ matrix.arch }}
 
+      # 6. Отладочная информация о бинарнике
       - name: Debug WAL-G binary
         run: |
           ls -lh
           file wal-g-${{ matrix.arch }}
 
+      # 7. Выделяем версию из тега
       - name: Extract version
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
+      # 8. Формируем DEB-пакет
       - name: Create DEB package
         run: |
           mkdir -p wal-g-deb/DEBIAN
@@ -59,50 +72,52 @@ jobs:
           Section: utils
           Priority: optional
           Architecture: ${{ matrix.arch }}
-          Maintainer: Your Name <your@email.com>
+          Maintainer: You <you@example.com>
           Description: WAL-G backup tool for PostgreSQL
           EOF
           dpkg-deb --build wal-g-deb wal-g_${VERSION}_${{ matrix.arch }}.deb
 
+      # 9. Дополнительная отладка: ищем файл wal-g_*.deb
       - name: Debug file location
         run: find . -name "wal-g_*.deb"
 
-      - name: Debug artifact path
-        run: |
-          echo "Checking for file: ./wal-g_${VERSION}_${{ matrix.arch }}.deb"
-          ls -lh ./wal-g_${VERSION}_${{ matrix.arch }}.deb || echo "DEB package not found"
-
+      # 10. Публикуем в gh-pages
       - name: Deploy to GitHub Pages
         run: |
-          # Настраиваем git-пользователя
+          # Настраиваем git
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
 
-          # Клонируем gh-pages
+          # Клонируем ветку gh-pages
           git clone --depth=1 --branch=gh-pages https://github.com/${{ github.repository }}.git repo-pages
           cd repo-pages
 
-          # Копируем .deb
-          mkdir -p dists/stable/main/binary-amd64
-          cp ../wal-g_${VERSION}_${{ matrix.arch }}.deb dists/stable/main/binary-amd64/
+          # Обновляем, если кто-то уже запушил другой архитектурный пакет:
+          git pull --rebase
 
-          # Генерируем Packages и Release
-          dpkg-scanpackages --arch amd64 dists/stable/main/binary-amd64 > dists/stable/main/binary-amd64/Packages
-          gzip -k dists/stable/main/binary-amd64/Packages
+          # Создаём папку под конкретную архитектуру, копируем .deb
+          mkdir -p dists/stable/main/binary-${{ matrix.arch }}
+          cp ../wal-g_${VERSION}_${{ matrix.arch }}.deb dists/stable/main/binary-${{ matrix.arch }}/
 
+          # Генерируем Packages для данной архитектуры
+          dpkg-scanpackages --arch ${{ matrix.arch }} dists/stable/main/binary-${{ matrix.arch }} > dists/stable/main/binary-${{ matrix.arch }}/Packages
+          gzip -kf dists/stable/main/binary-${{ matrix.arch }}/Packages
+
+          # Перезаписываем Release, указывая обе архитектуры.
+          # Даже если arm64 ещё не собран, он появится в другом параллельном шаге.
           cat <<EOF > dists/stable/Release
           Origin: WAL-G Repo
           Label: WAL-G APT Repository
           Suite: stable
           Codename: stable
-          Architectures: amd64
+          # ВАЖНО: перечисляем все архитектуры, которые хотим поддерживать
+          Architectures: amd64 arm64
           Components: main
           Description: APT repository for WAL-G
           EOF
 
+          # Коммит и пуш
           git add .
-          git commit -m "Update APT repo with WAL-G ${VERSION}"
-
-          # ВАЖНО: Используем GITHUB_TOKEN, чтобы пуш не требовал логина
+          git commit -m "Add WAL-G package ${VERSION} [${{ matrix.arch }}]"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
           git push origin gh-pages
