--- a/.github/workflows/deb-release.yml
+++ b/.github/workflows/deb-release.yml
@@ -31,7 +31,9 @@
 
         # 3. Устанавливаем необходимые пакетные зависимости для сборки
         - name: Install dependencies
-          run: sudo apt-get install -y devscripts debhelper dh-make dpkg-dev build-essential
+          # run: sudo apt-get install -y devscripts debhelper dh-make dpkg-dev build-essential
+          run: sudo apt-get update && sudo apt-get install -y devscripts debhelper dh-make dpkg-dev build-essential apt-utils
+
 
         # 4. make deps (если нужно подтянуть go-модули и т.п.)
         - name: Make deps
@@ -99,22 +101,12 @@
             mkdir -p dists/stable/main/binary-${{ matrix.arch }}
             cp ../wal-g_${VERSION}_${{ matrix.arch }}.deb dists/stable/main/binary-${{ matrix.arch }}/
 
-            # Генерируем Packages для данной архитектуры
-            dpkg-scanpackages --arch ${{ matrix.arch }} dists/stable/main/binary-${{ matrix.arch }} > dists/stable/main/binary-${{ matrix.arch }}/Packages
+            # Генерируем Packages/Packages.gz
+            apt-ftparchive packages dists/stable/main/binary-${{ matrix.arch }} > dists/stable/main/binary-${{ matrix.arch }}/Packages
             gzip -kf dists/stable/main/binary-${{ matrix.arch }}/Packages
 
-            # Перезаписываем Release, указывая обе архитектуры.
-            # Даже если arm64 ещё не собран, он появится в другом параллельном шаге.
-            cat <<EOF > dists/stable/Release
-            Origin: WAL-G Repo
-            Label: WAL-G APT Repository
-            Suite: stable
-            Codename: stable
-            # ВАЖНО: перечисляем все архитектуры, которые хотим поддерживать
-            Architectures: amd64 arm64
-            Components: main
-            Description: APT repository for WAL-G
-            EOF
+            # Генерируем полноценный Release с хэшами
+            apt-ftparchive release dists/stable > dists/stable/Release
 
             # Коммит и пуш
             git add .
