--- a/.github/workflows/deb-release.yml
+++ b/.github/workflows/deb-release.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         arch: [ amd64, arm64 ]  # Две архитектуры
