--- a/.github/workflows/deb-release.yml
+++ b/.github/workflows/deb-release.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           export GOOS=linux
           export GOARCH=${{ matrix.arch }}
+          export CGO_ENABLED=1
           export USE_BROTLI=1
           export USE_LIBSODIUM=1
           export USE_LZO=1          
