--- a/.github/workflows/deb-release-arm.yml
+++ b/.github/workflows/deb-release-arm.yml
@@ -21,55 +21,49 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build on arm64
+      - name: Build and package WAL-G on ARM64
         uses: uraimo/run-on-arch-action@v3
         with:
           arch: aarch64
           distro: ubuntu20.04
           shell: /bin/bash
-        run: |
-          # Устанавливаем зависимости
-          apt-get update
-          apt-get install -y build-essential curl git cmake \
-                            brotli libsodium-dev liblzo2-dev \
-                            devscripts debhelper dh-make dpkg-dev
+          run: |
+            # Устанавливаем зависимости
+            apt-get update
+            apt-get install -y build-essential curl git cmake \
+                              brotli libsodium-dev liblzo2-dev \
+                              devscripts debhelper dh-make dpkg-dev
 
-          # Устанавливаем Go для ARM64
-          curl -LO https://go.dev/dl/go${GO_VERSION}.linux-arm64.tar.gz
-          tar -C /usr/local -xzf go${GO_VERSION}.linux-arm64.tar.gz
-          export GOROOT=/usr/local/go
-          export GOPATH=$HOME/go
-          export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
+            # Устанавливаем Go для ARM64
+            curl -LO https://go.dev/dl/go${GO_VERSION}.linux-arm64.tar.gz
+            tar -C /usr/local -xzf go${GO_VERSION}.linux-arm64.tar.gz
+            export GOROOT=/usr/local/go
+            export GOPATH=$HOME/go
+            export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
 
-          # Сборка WAL-G
-          make deps
-          export GOOS=linux
-          export GOARCH=arm64
-          export CGO_ENABLED=1
-          make pg_build
-          mv main/pg/wal-g wal-g-arm64
-          
-      - name: Debug WAL-G binary
-        run: |
-          ls -lh
-          file wal-g-arm64
+            # Сборка WAL-G
+            make deps
+            export GOOS=linux
+            export GOARCH=arm64
+            export CGO_ENABLED=1
+            make pg_build
+            mv main/pg/wal-g wal-g-arm64
 
-      - name: Create DEB package
-        run: |
-          mkdir -p wal-g-deb/DEBIAN
-          mkdir -p wal-g-deb/usr/bin/
-          cp wal-g-arm64 wal-g-deb/usr/bin/wal-g
-          chmod 755 wal-g-deb/usr/bin/wal-g
-          cat <<EOF > wal-g-deb/DEBIAN/control
-          Package: wal-g
-          Version: ${GITHUB_REF#refs/tags/v}
-          Section: utils
-          Priority: optional
-          Architecture: arm64
-          Maintainer: You <you@example.com>
-          Description: WAL-G backup tool for PostgreSQL (Brotli, libsodium, LZO enabled)
-          EOF
-          dpkg-deb --build wal-g-deb wal-g_${GITHUB_REF#refs/tags/v}_arm64.deb
+            # Создание DEB пакета
+            mkdir -p wal-g-deb/DEBIAN
+            mkdir -p wal-g-deb/usr/bin/
+            cp wal-g-arm64 wal-g-deb/usr/bin/wal-g
+            chmod 755 wal-g-deb/usr/bin/wal-g
+            cat <<EOF > wal-g-deb/DEBIAN/control
+            Package: wal-g
+            Version: ${GITHUB_REF#refs/tags/v}
+            Section: utils
+            Priority: optional
+            Architecture: arm64
+            Maintainer: You <you@example.com>
+            Description: WAL-G backup tool for PostgreSQL (Brotli, libsodium, LZO enabled)
+            EOF
+            dpkg-deb --build wal-g-deb wal-g_${GITHUB_REF#refs/tags/v}_arm64.deb
 
       - name: Upload DEB package
         uses: actions/upload-artifact@v4
